--- a/assets/css/rev_main.css
+++ b/assets/css/rev_main.css
@@ -2607,41 +2607,42 @@ input, select, textarea {
 
                 .tiles article > .image:before {
                     pointer-events: none;
-                    -moz-transition: background-image 0.5s ease, opacity 0.5s ease;
-                    -webkit-transition: background-image 0.5s ease, opacity 0.5s ease;
-                    -ms-transition: background-image 0.5s ease, opacity 0.5s ease;
-                    transition: background-image 0.5s ease, opacity 0.5s ease;
-                    content: '';
-                    display: block;
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    opacity: 1.0;
-                    z-index: 1;
-                    opacity: 0.8;
+					-moz-transition: background-color 0.5s ease, opacity 0.5s ease;
+					-webkit-transition: background-color 0.5s ease, opacity 0.5s ease;
+					-ms-transition: background-color 0.5s ease, opacity 0.5s ease;
+					transition: background-color 0.5s ease, opacity 0.5s ease;
+					content: '';
+					display: block;
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					opacity: 1.0;
+					z-index: 1;
+					opacity: 0.8;
+                    background-color: transparent;
                 }
 
                 .tiles article > .image:after {
                     pointer-events: none;
-                    -moz-transition: opacity 0.5s ease;
-                    -webkit-transition: opacity 0.5s ease;
-                    -ms-transition: opacity 0.5s ease;
-                    transition: opacity 0.5s ease;
-                    content: '';
-                    display: block;
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 0.25px%3B stroke: %23ffffff%3B %7D%3C/style%3E%3Cline x1='0' y1='0' x2='100' y2='100' /%3E%3Cline x1='100' y1='0' x2='0' y2='100' /%3E%3C/svg%3E");
+					-moz-transition: opacity 0.5s ease;
+					-webkit-transition: opacity 0.5s ease;
+					-ms-transition: opacity 0.5s ease;
+					transition: opacity 0.5s ease;
+					content: '';
+					display: block;
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+                    background-image: none;
                     background-position: center;
-                    background-repeat: no-repeat;
-                    background-size: 100% 100%;
-                    opacity: 0.25;
-                    z-index: 2;
+					background-repeat: no-repeat;
+					background-size: 100% 100%;
+					opacity: 0.25;
+					z-index: 2;
                 }
 
             .tiles article > a {
@@ -2661,10 +2662,10 @@ input, select, textarea {
                 -webkit-justify-content: center;
                 -ms-justify-content: center;
                 justify-content: center;
-                -moz-transition: background-image 0.5s ease, -moz-transform 0.5s ease;
-                -webkit-transition: background-image 0.5s ease, -webkit-transform 0.5s ease;
-                -ms-transition: background-image 0.5s ease, -ms-transform 0.5s ease;
-                transition: background-image 0.5s ease, transform 0.5s ease;
+                -moz-transition: background-color 0.5s ease, -moz-transform 0.5s ease;
+                -webkit-transition: background-color 0.5s ease, -webkit-transform 0.5s ease;
+                -ms-transition: background-color 0.5s ease, -ms-transform 0.5s ease;
+                transition: background-color 0.5s ease, transform 0.5s ease;
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -2720,12 +2721,13 @@ input, select, textarea {
             }
 
                 body:not(.is-touch) .tiles article:hover > .image:before {
-                    background-color: #333333;
                     opacity: 0.35;
                 }
 
                 body:not(.is-touch) .tiles article:hover > .image:after {
-                    opacity: 0;
+                    content: '';
+					opacity: 1;
+					background-image: url("images/pic05.jpg");
                 }
 
             body:not(.is-touch) .tiles article:hover .content {
